# maegic

./: CMakeLists.txt  inventory.c  inventory.h  main.c
content/weapons/: dagger.txt
